Archive2/33/00ddfeef0a277a/output
main.cpp: In function 'int main()':
main.cpp:6:10: error: 'void A<T, W>::foo() [with T = int; W = int]' is private
     void foo(){ std::cout << "foo()" << std::endl; };
          ^
main.cpp:17:19: error: within this context
 int main(){ t.foo(); }
                   ^
